# iter

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  iter.cabal  justfile  shell.nix  todo.md
app/: Common.hs  Ghci.hs  Legacy.hs  Main.hs
demo/: demo.py  demo.yml  demo_final.py  hs.yml
