cabal-version:      3.0
name:               iter
version:            0.1.0.0
homepage:           https://github.com/freuk/iter
license:            MIT
license-file:       LICENSE
author:             Valentin Reis
maintainer:         fre@freux.fr
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable iter
    ghc-options: -Wall
    main-is:          Main.hs
    build-depends:
     Diff,
     aeson,
     base,
     bytestring,
     casing,
     containers,
     filepath,
     haskeline,
     http-conduit,
     mtl,
     optparse-applicative,
     pretty-simple,
     process,
     protolude,
     split,
     temporary,
     text,
     time,
     yaml

    hs-source-dirs:   app
    default-language: Haskell2010
